# apps/server/api/swagger.json
@@ -58,6 +58,46 @@
 					"$ref": "#/components/schemas/UserDTO"
 				},
 				"type": "array"
+			},
+			"APIPaginatedResponse_UserDTO_": {
+				"properties": {
+					"next": {
+						"type": "string"
+					},
+					"previous": {
+						"type": "string"
+					},
+					"records": {
+						"items": {
+							"$ref": "#/components/schemas/UserDTO"
+						},
+						"type": "array"
+					},
+					"totalRecords": {
+						"type": "number",
+						"format": "double"
+					},
+					"totalPages": {
+						"type": "number",
+						"format": "double"
+					},
+					"pageSize": {
+						"type": "number",
+						"format": "double"
+					},
+					"page": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"records",
+					"totalRecords",
+					"totalPages",
+					"pageSize",
+					"page"
+				],
+				"type": "object"
 			}
 		},
 		"securitySchemes": {}
@@ -171,7 +211,7 @@
 						}
 					}
 				},
-				"description": "API endpoint used to create a new user",
+				"description": "API endpoint used to create a new user.",
 				"tags": [
 					"users"
 				],
@@ -205,6 +245,50 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/users/withPagination": {
+			"get": {
+				"operationId": "FetchUserListWithPagination",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/APIPaginatedResponse_UserDTO_"
+								}
+							}
+						}
+					}
+				},
+				"description": "API endpoint used to fetch user list with pagination schema.\r\nSupply the page and page size parameters and receive the selecting user list.",
+				"tags": [
+					"users"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "The number of the page. If isn't provided, it will be set to 1.",
+						"in": "query",
+						"name": "page",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"description": "The size of the page. If isn't provided, it will be set to 1.",
+						"in": "query",
+						"name": "pageSize",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/users/{userId}": {
