# apps/server/src/api/components/user/user-controller.ts
@@ -1,4 +1,5 @@
 /* eslint-disable @typescript-eslint/no-explicit-any */
+import express from 'express'
 import { CREATED, OK } from 'http-status'
 import {
   Body,
@@ -9,6 +10,8 @@ import {
   Path,
   Post,
   Put,
+  Query,
+  Request,
   Response,
   Route,
   Tags,
@@ -16,8 +19,9 @@ import {
 import { inject, injectable } from 'tsyringe'
 
 import { validationMiddleware } from '../../middlewares'
-import { APIErrorResponse } from '../../shared'
+import { APIErrorResponse, APIPaginatedResponse } from '../../shared'
 import { userValidator } from '../../validators'
+import { pageQueryParamsValidator } from '../../validators/page-query-params-validator'
 import { UserMapper } from './user-mapper'
 import { UserDTO, UserListDTO } from './user-models'
 import { IUserService } from './user-service'
@@ -31,7 +35,7 @@ class UserController extends Controller {
   }
 
   /**
-   * API endpoint used to create a new user
+   * API endpoint used to create a new user.
    */
   @Post('/')
   @Response<UserDTO>('201', 'Created', {
@@ -59,6 +63,53 @@ class UserController extends Controller {
     const userListDTO = retrievedUserList.map((u) => UserMapper.toDTO(u))
     this.setStatus(OK)
     return userListDTO
+  }
+
+  /**
+   * API endpoint used to fetch user list with pagination schema.
+   * Supply the page and page size parameters and receive the selecting user list.
+   * @param page The number of the page. If isn't provided, it will be set to 1.
+   * @param pageSize The size of the page. If isn't provided, it will be set to 1.
+   */
+  @Get('/withPagination')
+  @Response<APIPaginatedResponse<UserDTO>>('200', 'OK', {
+    page: 1,
+    pageSize: 1,
+    totalPages: 1,
+    totalRecords: 1,
+    records: [
+      {
+        id: 'XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX',
+        name: 'name',
+        email: 'email@email.com',
+      },
+    ],
+  })
+  @Middlewares(validationMiddleware(pageQueryParamsValidator))
+  public async fetchUserListWithPagination(
+    @Request() req: express.Request,
+    @Query() page?: number,
+    @Query() pageSize?: number,
+  ): Promise<APIPaginatedResponse<UserDTO>> {
+    const parsedQuery = pageQueryParamsValidator.parse({
+      query: { page: page, pageSize: pageSize },
+    })
+    const pageParams = {
+      req: req,
+      page: parsedQuery.query.page,
+      pageSize: parsedQuery.query.pageSize,
+    }
+    const retrievedUserListWithPagination =
+      await this.userService.retrieveUserListWithPagination(pageParams)
+    const userListDTO = retrievedUserListWithPagination.records.map((u) =>
+      UserMapper.toDTO(u),
+    )
+    const retrievedUserListDTOWithPagination = {
+      ...retrievedUserListWithPagination,
+      records: userListDTO,
+    }
+    this.setStatus(OK)
+    return retrievedUserListDTOWithPagination
   }
 
   @Get('{userId}')
