# apps/server/src/api/components/user/user-service.ts
@@ -1,19 +1,27 @@
 import { INTERNAL_SERVER_ERROR, NOT_FOUND } from 'http-status'
 
+import { IPagingService, PageParams } from '../../../services'
 import { ServerError } from '../../server-error'
+import { APIPaginatedResponse } from '../../shared'
 import { User, UserList } from './user-models'
 import { IUserRepository } from './user-repository'
 
 interface IUserService {
   registerUser(user: User): Promise<User>
   retrieveUserList(): Promise<UserList>
+  retrieveUserListWithPagination(
+    pageParams: PageParams,
+  ): Promise<APIPaginatedResponse<User>>
   retrieveUser(userId: string): Promise<User>
   replaceUser(userId: string, user: User): Promise<User>
   removeUser(userId: string): Promise<User>
 }
 
 class UserService implements IUserService {
-  constructor(private userRepository: IUserRepository) {}
+  constructor(
+    private userRepository: IUserRepository,
+    private pagingService: IPagingService,
+  ) {}
 
   async registerUser(user: User): Promise<User> {
     try {
@@ -33,6 +41,29 @@ class UserService implements IUserService {
     } catch (error) {
       const message =
         'An error occurred when reading list of users from database'
+      throw new ServerError(message, INTERNAL_SERVER_ERROR, {
+        context: undefined,
+        cause: error,
+      })
+    }
+  }
+
+  async retrieveUserListWithPagination(
+    pageParams: PageParams,
+  ): Promise<APIPaginatedResponse<User>> {
+    try {
+      const limit = pageParams.pageSize
+      const offset = (pageParams.page - 1) * limit
+      const [records, totalRecords] =
+        await this.userRepository.readUsersListWithPagination(limit, offset)
+      return this.pagingService.paginateRecords<User>(
+        pageParams,
+        totalRecords,
+        records,
+      )
+    } catch (error) {
+      const message =
+        'An error occurred when reading and counting users from database'
       throw new ServerError(message, INTERNAL_SERVER_ERROR, {
         context: undefined,
         cause: error,
