# apps/server/src/api/shared/api-paginated-response.ts
@@ -1,0 +1,11 @@
+type APIPaginatedResponse<Entity> = {
+  page: number
+  pageSize: number
+  totalPages: number
+  totalRecords: number
+  records: Entity[]
+  previous?: string
+  next?: string
+}
+
+export { APIPaginatedResponse }
